[package]
edition = "2021"
name = "tauri-webview-util"
version = "0.0.0"
authors = ["silvanshade <silvanshade@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
homepage = "https://github.com/silvanshade/tauri-webview-util"
repository = "https://github.com/silvanshade/tauri-webview-util"
keywords = ["tauri"]
description = """
Utilities for working with tauri's PlatformWebview
"""

[package.metadata.cargo-udeps.ignore]
normal = ["itertools", "wry"]

[features]
debug = []
tracing = ["debug", "dep:tracing"]

[dependencies]
async-graphql = { version = "5.0", optional = true }
futures = { version = "0.3", features = ["alloc"], default-features = false }
itertools = "0.10.5"
oneshot = "0.1"
regex = "1.7.1"
serde = { version = "1.0", optional = true }
tauri = { version = "1.2", features = ["wry"], default-features = false }
time = { version = "0.3", features = ["serde-well-known"] }
tokio = { version = "1.23", default-features = false }
tracing = { version = "0.1", features = ["attributes", "std"], optional = true }
url = "2.3"
wry = { version = "0.24", default-features = false }

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
glib = "0.16"
soup2 = "0.2"
webkit2gtk = { version = "0.18", features = [
  "v2_22",
], default-features = false }

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
block2 = { version = "0.2.0-alpha.7" }
dispatch = { version = "0.2", default-features = false }

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies.icrate]
version = "0.0.1"
features = [
  "Foundation_NSDate",
  "Foundation_NSHTTPCookie",
  "Foundation_NSNumber",
  "Foundation_NSSet",
  "Foundation_NSThread",
  "Foundation_NSURL",
  "Foundation_NSURLRequest",
  "WebKit_WKHTTPCookieStore",
  "WebKit_WKNavigation",
  "WebKit_WKWebView",
  "WebKit_WKWebViewConfiguration",
  "WebKit_WKWebsiteDataStore",
  "WebKit",
]

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = { version = "0.19", default-features = false }
windows = { version = "0.39", default-features = false }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = true

[patch.crates-io]
block2 = { git = "https://github.com/silvanshade/objc2", branch = "webkit-skips" }
icrate = { git = "https://github.com/silvanshade/objc2", branch = "webkit-skips" }
tauri = { git = "https://github.com/tauri-apps/tauri", rev = "3f35b45" }
